--- a/apiFront/src/app/generate-report/generate-report.component.html
+++ b/apiFront/src/app/generate-report/generate-report.component.html
@@ -1,5 +1,6 @@
 <div class="grid">
     <div class="col-4">
+        <!-- <app-advanced-search (productAdvancedSelection)="processNewPricing($event)"></app-advanced-search> -->
         <app-advanced-search (productAdvancedSelection)="getReport($event)"></app-advanced-search>
     </div>
     <div class="col-4">
